# mandelbrot

./: Pipfile  README.md  app.py  pyproject.toml  requirements.txt
src/: callbacks.py  layout.py  utils.py
