[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = "App for visualizing the mandelbrot set"
authors = ["vegard  solberg <vegardsolberg@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
numba = "*"
plotly = "*"
pandas = "*"
dash = "*"
dash-bootstrap-components = "*"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.7b0"
flake8 = "^3.9.2"
flakehell = "^0.9.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.flakehell]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | profiling
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"